--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ Student id: 149024218-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--this css is for social media icon i used-->
-    <link rel="stylesheet" href="subash.css" />
+    <link rel="stylesheet" href="style
+                                 .css" />
 
     <title>SENECA COLLEGE</title>
 </head>
